// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call login on button click 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Login
  </button>
</div>
`;

exports[`should render login page correctly 1`] = `
<div>
  <button>
    Login
  </button>
</div>
`;
